--- a/style.css
+++ b/style.css
@@ -1,6 +1,21 @@
+/* RESET CSS */
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'WWE';
+    border-bottom: 0;
+}
+@font-face{
+    font-family: 'WWE';
+    src: url(font/SmackLaidethDown2016-DKBm.ttf);
+}
+/* ****************************** */
+
+/* FEITO PROF. */
 ul#jogadorEscolha li a,
 ul#computadorEscolha li a {
-    opacity: 0.2;
+    opacity: 0.7;
     transition: ease-in-out 0.3s;
 }
 
@@ -8,4 +23,97 @@ ul#jogadorEscolha li a:hover,
 ul#jogadorEscolha li a.selecionado,
 ul#computadorEscolha li a.selecionado {
     opacity: 1;
+}
+/* ******************************* */
+body {
+
+    background-color: #1c1c1c;
+    color: white;
+    font-family: 'Arial', sans-serif;
+}
+
+#principal {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+
+#titulo {
+    font-size: 4rem;
+    margin-bottom: 45px;
+    margin-left: 210px;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+}
+
+#placar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+    margin-bottom: 40px;
+}
+
+#jogador,
+#computador {
+    flex: 1;
+    text-align: center;
+}
+
+#jogadorNome,
+#computadorNome {
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+}
+
+ul#jogadorEscolha,
+ul#computadorEscolha {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+ul#jogadorEscolha li,
+ul#computadorEscolha li {
+    margin: 0 10px;
+}
+
+
+#versus {
+    font-size: 3rem;
+    margin-top: 50px;
+}
+
+#mensagem {
+    font-size: 1.5rem;
+    text-align: center;
+    width: 80%;
+    margin-left: 200px;
+}
+
+
+#jogadorEscolha img,
+#computadorEscolha img {
+    width: 200px;
+    height: 200px;
+    border: 4px solid white;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: transform 0.2s;
+    margin: 5px;
+}
+
+#jogadorEscolha img:hover,
+#computadorEscolha img:hover {
+    transform: scale(1.1);
+}
+
+#jogadorEscolha li a.selecionado img,
+#computadorEscolha li a.selecionado img {
+    border-color: #e74c3c;
+    transform: scale(1);
+    filter: drop-shadow(0 0 5px #e74c3c);
 }
